fix: layout breaking

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,6 @@
 /* font-size: 16px (Desktop) */
 html {
   display: flex;
-  flex-direction: column-reverse;
   @media (max-width: 1080px) {
     font-size: 93.75%;
   }
